# dapp-scaffold

./: 404.html  basics.html  index.html  next.config.js  package.json  tsconfig.json
_next/static/0a0iHxz9SOxXddjzToRwN/: _buildManifest.js
_next/static/7UOtnopVxxH7MSttfe_Rb/: _buildManifest.js
_next/static/chunks/: 30.c6d17a8d557f6a25.js  468-971d3c62677d4d4e.js  554.df791dfc0247c2fd.js  600-6c4bf7f3aa5871af.js  600-fb4f15fe5dcc9522.js  b8b506e4-fded74406d9f69ac.js  main-54a5d08df30bbb48.js  webpack-2c4a6acc057d81bd.js
_next/static/chunks/pages/: _app-6f65b98914e6b35e.js  basics-37112dcac3da5e3b.js  index-2002ad645dc8d6fa.js
_next/static/css/: 9ad4502faf30622f.css
anchor-program/: .gitignore  Anchor.toml  Dockerfile  anchor  build.sh  package-lock.json
anchor-program/programs/anchor-program/: Cargo.toml
anchor-program/programs/anchor-program/src/: lib.rs
src/components/: Bank.tsx  Stake.tsx  idl.json
src/views/basics/: index.tsx
src/views/home/: index.tsx
