[package]
name = "anchor-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.26.0"
mpl-token-metadata = { version="1.8.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.1.0"
